--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -38,57 +38,63 @@
   margin: 0;
   font-size: 2.25rem;
   padding: 0;
-  animation: neonGlow 3s linear infinite
+  animation: neonGlow 3s linear infinite;
 }
 
 .after-dark span:nth-child(1) {
-  animation-delay: 1s
+  animation-delay: 1s;
 }
 
 .after-dark span:nth-child(2) {
-  animation-delay: 1s
+  animation-delay: 1s;
 }
 
 .after-dark span:nth-child(3) {
-  animation-delay: 1.2s
+  animation-delay: 1.2s;
 }
 
 .after-dark span:nth-child(4) {
-  animation-delay: 1s
+  animation-delay: 1s;
 }
 
 .after-dark span:nth-child(5) {
   animation-delay: 2s;
-  margin-right: 3px!important
+  margin-right: 3px !important;
 }
 
 .after-dark span:nth-child(6) {
-  animation-delay: 2.45s
+  animation-delay: 2.45s;
 }
 
 .after-dark span:nth-child(7) {
-  animation-delay: 2.75s
+  animation-delay: 2.75s;
 }
 
 .after-dark span:nth-child(8) {
-  animation-delay: 2.75s
+  animation-delay: 2.75s;
 }
 
 .after-dark span:nth-child(9) {
-  animation-delay: 2.75s
+  animation-delay: 2.75s;
 }
 
 @keyframes neonGlow {
-  0%,100% {
-      color: #abfecb;
-      filter: blur(2px);
-      text-shadow: 0 0 10px var(--primaryColor),0 0 20px var(--primaryColor),0 0 40px var(--primaryColor),0 0 50px var(--primaryColor),0 0 60px var(--primaryColor)
+  0%,
+  100% {
+    color: #abfecb;
+    filter: blur(2px);
+    text-shadow: 0 0 10px var(--primaryColor), 0 0 20px var(--primaryColor),
+      0 0 40px var(--primaryColor), 0 0 50px var(--primaryColor),
+      0 0 60px var(--primaryColor);
   }
 
-  5%,95% {
-      color: #fff;
-      filter: blur(0);
-      text-shadow: none,
+  5%,
+  95% {
+    color: #fff;
+    filter: blur(0);
+    text-shadow: 0 0 10px var(--primaryColor), 0 0 20px var(--primaryColor),
+      0 0 40px var(--primaryColor), 0 0 50px var(--primaryColor),
+      0 0 60px var(--primaryColor);
   }
 }
 
@@ -113,7 +119,7 @@
   font-weight: 700;
 }
 
-.close-icon{
+.close-icon {
   display: none;
 }
 
@@ -122,7 +128,7 @@
   width: 35px;
 }
 
-.hamburger-menu{
+.hamburger-menu {
   display: none;
   cursor: pointer;
 }
@@ -171,10 +177,9 @@
   .nav-buttons {
     justify-content: end;
     gap: 3rem;
-    position: relative;
   }
 
-  .close-icon{
+  .close-icon {
     display: block;
     position: absolute;
     top: 1.5rem;
@@ -182,43 +187,38 @@
   }
 
   .nav-buttons ul {
-border: 1px solid green;
-display: flex;
-flex-direction: column;
-position: fixed;
-top: 0;
-right: 0;
-height: 100%;
-background-color: black;
-z-index: 5555;
-width: 40%;
-padding: 10rem 2rem 20rem;
-opacity: 90%;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    background-color: black;
+    z-index: 5555;
+    width: 40%;
+    padding: 10rem 2rem 20rem;
   }
 
-  .open{
-
+  .open {
   }
 
-  .nav-buttons li{
-border: 1px solid red;
-width: 100%;
-font-size: 2rem;
-font-weight: 400;
-
+  .nav-buttons li {
+    border: 1px solid red;
+    width: 100%;
+    font-size: 2rem;
+    font-weight: 400;
   }
 
   .after-dark {
     top: 26px;
     left: 45px;
-
   }
-  
+
   .after-dark span {
     font-size: 1.1875rem;
   }
 
-  .hamburger-menu{
+  .hamburger-menu {
     display: block;
     margin-top: 3rem;
   }
@@ -228,5 +228,4 @@ font-weight: 400;
     left: 50%;
     transform: translate(-50%, -50%);
   }
-  
 }
