--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -195,7 +195,7 @@
     right: -50rem;
     height: 100%;
     background-color: var(--primaryBackgroundColor);
-    z-index: 5555;
+    z-index: 555555555;
     width: 40%;
     padding: 10rem 4rem 20rem;
   }
