--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -114,7 +114,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  color: var(--tertiaryColor);
+  color: var(--primaryColorGreen900);
   z-index: 5;
 }
 
