--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -31,7 +31,7 @@
   color: var(--primaryColor);
   top: 45px;
   left: 70px;
-  z-index: 1000;
+  z-index: 0;
   transform: rotate(-13deg);
 }
 
@@ -126,6 +126,10 @@
   display: none;
 }
 
+.modal {
+  display: none;
+}
+
 .button-container {
   position: relative;
   width: 35px;
@@ -190,6 +194,27 @@
     cursor: pointer;
   }
 
+  .modal {
+    display: block;
+    position: fixed;
+
+    background-color: var(--primaryColorBlack);
+    opacity: 0.55;
+    top: 0;
+    right: -100rem;
+    width: 100%;
+    height: 100%;
+  }
+
+  .modal{
+    transition: right 0.4s ease-out;
+    transition-delay: 0.15s;
+  }
+
+  .modal-open{
+    right: 0;
+  }
+
   .nav-links {
     display: flex;
     flex-direction: column;
@@ -204,56 +229,48 @@
   }
 
   .nav-links {
-    transition: right 0.4s;
+    transition: right 0.4s ease-out;
   }
 
-  .nav-links.closing {
-    right: -50rem; /* or whatever value represents the closed state */
-    transition: right 0.4s;
-  }
-  
-  .open{
+  .open {
     right: 0;
   }
-  
+
   /* Set the animation */
   .nav-link {
     margin-left: 10rem;
     width: 100%;
     font-size: 2rem;
-    font-weight: 400;    
+    font-weight: 400;
+    color: var(--tertiaryColor);
   }
 
-  .nav-link:nth-child(1){
-    transition-delay: .1s;
+  .nav-link:nth-child(1) {
+    transition-delay: 0.1s;
   }
 
-  .nav-link:nth-child(2){
-    transition-delay: .2s;
+  .nav-link:nth-child(2) {
+    transition-delay: 0.2s;
   }
-  .nav-link:nth-child(3){
-    transition-delay: .3s;
+  .nav-link:nth-child(3) {
+    transition-delay: 0.3s;
   }
-  .nav-link:nth-child(4){
-    transition-delay: .4s;
+  .nav-link:nth-child(4) {
+    transition-delay: 0.4s;
   }
-  .nav-link:nth-child(5){
-    transition-delay: .5s;
+  .nav-link:nth-child(5) {
+    transition-delay: 0.5s;
   }
-  
 
   /* Set animation timing */
   .nav-link {
-    transition: margin .4s ease-out;
+    transition: margin 0.4s ease-out;
   }
-
 
   /* Final frame */
-  .show-link{
-  margin-left: 0;
+  .show-link {
+    margin-left: 0;
   }
-
-
 
   .nav-links span {
     transition: margin 0.4s;
@@ -284,14 +301,14 @@
   }
 }
 
-@media screen and (max-width: 768px){
-  .nav-links{
+@media screen and (max-width: 768px) {
+  .nav-links {
     width: 55%;
   }
 }
 
-@media screen and (max-width: 425px) {
- .nav-links{
-  width: 100%;
- }
+@media screen and (max-width: 530px) {
+  .nav-links {
+    width: 100%;
+  }
 }
