About Contact Section

--- a/src/components/aboutContact/AboutContact.module.css
+++ b/src/components/aboutContact/AboutContact.module.css
@@ -1,16 +1,19 @@
 .about-contact{
   min-height: 44.89rem;
   z-index: 2;
-  border: 2px solid white;
+  /* border: 2px solid white; */
   padding-bottom: 10rem;
 
 }
 
 .about-contact-content{
+  margin-top: 4rem;
   height: 100%;
-  border: 2px solid turquoise;
+  /* border: 2px solid turquoise; */
+  display: flex;
+  justify-content: center;
 }
 
 .right{
-  width: 27rem;
+  width: 32rem;
 }
