--- a/src/components/aboutUs/AboutUs.module.css
+++ b/src/components/aboutUs/AboutUs.module.css
@@ -22,6 +22,7 @@
   color: var(--tertiaryColor);
   margin-bottom: 1.25rem;
   font-weight: 700;
+  font-size: 2rem;
 }
 .right p {
   color: var(--bodyText);
