--- a/src/components/qualityQuantity/QualityQuantity.module.css
+++ b/src/components/qualityQuantity/QualityQuantity.module.css
@@ -16,6 +16,7 @@
   color: var(--tertiaryColor);
   margin-bottom: 1.25rem;
   font-weight: 700;
+  font-size: 2rem;
 }
 
 .quality-quantity-content h2 span {
