--- a/src/components/serviceUpdates/ServiceUpdates.module.css
+++ b/src/components/serviceUpdates/ServiceUpdates.module.css
@@ -8,12 +8,12 @@
   flex-direction: row;
   height: 100%;
   align-items: center;
-  border: 2px solid chartreuse;
   gap: 2rem;
+  padding: 1rem 0;
 }
 
 .left {
-  max-width: 28.125rem;
+  max-width: 20.125rem;
   width: 100%;
 }
 
@@ -45,10 +45,22 @@
 }
 
 .card {
+  border-radius: 0.5rem;
   max-width: 17.5rem;
   width: 100%;
   height: 22.664375rem;
-  border: 1px solid pink;
+  padding: 1.875rem;
+  border-top: 4px solid var(--primaryColor);
+  box-shadow: 0px 4px 25px 10px rgba(0, 0, 0, 0.08);
+}
+
+.card-dark{
+  background-color: #1b1b1b;
+  border-bottom: 1px solid var(--primaryColor);
+  box-shadow: 0 0 15px -5px var(--primaryColor);
+  border-right: 1px solid var(--primaryColor);
+  border-top: 4px solid var(--primaryColor);
+  border-left: 1px solid var(--primaryColor);
 }
 
 .card:nth-child(2) {
@@ -67,5 +79,15 @@
 .right .icon-container {
   width: 50px;
   height: 50px;
-  border: 1px solid green;
+  margin-bottom: 1.25rem;
+}
+
+.right .icon-container img{
+  width: 100%;
+  height: 100%;
+}
+
+.card h3{
+  color: var(--primaryColor);
+  margin-bottom: 0.9375rem;
 }
