--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -36,6 +36,8 @@
 
 .form-contact {
   margin: 1rem;
+  max-width: 32rem;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 45.5875rem;
