--- a/src/components/serviceUpdates/ServiceUpdates.module.css
+++ b/src/components/serviceUpdates/ServiceUpdates.module.css
@@ -1,6 +1,7 @@
 .service-updates {
   min-height: 54.125rem;
   z-index: 2;
+  margin-bottom: 10rem;
 }
 
 .service-updates-content {
@@ -54,7 +55,7 @@
   box-shadow: 0px 4px 25px 10px rgba(0, 0, 0, 0.08);
 }
 
-.card-dark{
+.card-dark {
   background-color: #1b1b1b;
   border-bottom: 1px solid var(--primaryColor);
   box-shadow: 0 0 15px -5px var(--primaryColor);
@@ -82,12 +83,38 @@
   margin-bottom: 1.25rem;
 }
 
-.right .icon-container img{
+.right .icon-container img {
   width: 100%;
   height: 100%;
 }
 
-.card h3{
+.card h3 {
   color: var(--primaryColor);
   margin-bottom: 0.9375rem;
+}
+
+@media screen and (max-width: 1024px) {
+  .left {
+    max-width: none;
+    margin-bottom: 3rem;
+  }
+
+  .service-updates-content {
+    flex-direction: column;
+  }
+
+  .right {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    column-gap: 2.5rem;
+    row-gap: 2.5rem;
+  }
+
+  .card:nth-child(2) {
+    margin-top: 0;
+  }
+
+  .card:nth-child(4) {
+    margin-top: 0;
+  }
 }
