--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -41,11 +41,11 @@
   width: 16.05506rem;
   height: 8.75rem;
   margin-top: 0;
+  object-fit: fill;
 }
 
 .portfolio-card img {
   width: 100%;
-  height: auto;
 }
 
 .portfolio-card h3 {
